--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .score-field {
   width: 100%;
-  height: 120px;
+  height: 100px;
 }
 
 .welder-name {
@@ -52,6 +52,7 @@
   line-height: 18px;
   opacity: 0.8;
   background: #041323;
+  border-bottom: rgb(134, 131, 131) solid 1px;
 }
 
 .success-back {
@@ -89,17 +90,18 @@
   line-height: 18px;
   opacity: 0.8;
   background: #041323;
+  border-bottom: rgb(136, 134, 134) solid 1px;
 }
 
 #rander {
-  width: 564px;
+  width: 30%;
   height: 505px;
   opacity: 0.8;
   background: #041323;
 }
 
 #line {
-  width: 1294px;
+  width: 70%;
   height: 505px;
   opacity: 0.8;
   background: #041323;
