--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,7 +46,7 @@
 .item-title {
   width: 100%;
   height: 60px;
-  font-size: 18px;
+  font-size: 24px;
   color: #FFFFFF;
   letter-spacing: -0.32px;
   line-height: 18px;
@@ -115,4 +115,24 @@
 .next-data {
   opacity: 0.8;
   background: #041323;
+}
+
+.upper-triangle {
+  width: 0;
+  height: 0;
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 10px;
+  border: 10px solid transparent;
+  border-bottom: 16px solid #EE3124;
+}
+
+.lower-triangle {
+  width: 0;
+  height: 0;
+  border: 10px solid transparent;
+  border-top: 16px solid #EE3124;
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 20px;
 }
