--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,14 +28,32 @@
     <span class="item">10</span>
     <span class="item">8</span>
   </div>
-  <div class="item-data space-between">
+  <div class="item-data space-between ">
     <span class="first-item">人工设定参数</span>
-    <span class="item">14</span>
-    <span class="item">15</span>
-    <span class="item">8</span>
-    <span class="item">1</span>
-    <span class="item">10</span>
-    <span class="item">8</span>
+    <div class="item">
+      <span>14</span>
+      <span class="upper-triangle"></span>
+    </div>
+    <div class="item">
+      <span>14</span>
+      <span class="lower-triangle"></span>
+    </div>
+    <div class="item">
+      <span>14</span>
+      <span class="upper-triangle"></span>
+    </div>
+    <div class="item">
+      <span>14</span>
+      <span class="upper-triangle"></span>
+    </div>
+    <div class="item">
+      <span>14</span>
+      <span class="upper-triangle"></span>
+    </div>
+    <div class="item">
+      <span>14</span>
+      <span class="upper-triangle"></span>
+    </div>
   </div>
 </section>
 <section class="space-around">
