添加折线图

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
     <echart [chartType]="radar" class="rander-chart"></echart>
   </div>
   <div id="line">
-    <echart [chartType]="radar" class="rander-chart"></echart>
+    <echart [chartType]="lineChart" class="line-chart"></echart>
   </div>
 </section>
 <section>
