--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,10 @@
 </section>
 <section>
   <div class="item-title success-back space-between">
-    <span class="first-item">上次钢卷号：55421342</span>
+    <div class="center first-item">
+    <img  class="alert"  src="../assets/alert.png" alt="警告">
+    <span class="">上次钢卷号: 55421342</span>
+  </div>
     <span class="item">电流(kA)</span>
     <span class="item">速度(m/min)</span>
     <span class="item">焊轮压力(kN)</span>
@@ -66,7 +69,7 @@
 </section>
 <section>
   <div class="item-title space-between next-field">
-    <span class="first-item">下次钢卷号:55421342</span>
+    <span class="first-item">下次钢卷号: 55421342</span>
     <span class="item">电流(kA)</span>
     <span class="item">速度(m/min)</span>
     <span class="item">焊轮压力(kN)</span>
