--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
     <div class="space-around">
       <img class="health-logo" src="../assets/health.png" alt="baosteel">
       <span class="health-desc">健康评分：</span>
-      <span class="health-score">{{data.current_machine_score}}</span>
-      <span class="health-score success-score">99</span>
+      <span class="health-score success-score">{{data.current_machine_score}}</span>
     </div>
   </div>
 </section>
