--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,9 +68,15 @@
 <section class="space-around">
   <div id="rander">
     <echart [chartType]="radar" class="rander-chart"></echart>
+    <div class="star-label">
+      <span class="star-label-up">48</span>
+      <span class="star-label-down">焊接质量评分</span>
+    </div>
   </div>
+
   <div id="line">
     <echart [chartType]="lineChart" class="line-chart"></echart>
+
   </div>
 </section>
 <section>
