--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
   <div id="rander">
     <echart [chartType]="radar" class="rander-chart"></echart>
     <div class="star-label">
-      <span class="star-label-up">48</span>
+      <span class="star-label-up">{{data.seam_score}}</span>
       <span class="star-label-down">焊接质量评分</span>
     </div>
   </div>
