--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
   </div>
 </section>
 <section>
-  <div class="item-title space-between" [ngClass]="{'success-back':data.seam_score_ok,'error-back':!data.seam_score_ok}">
+  <div class="item-title space-between" [ngClass]="{'success-back':'data.seam_score_ok','error-back':'!data.seam_score_ok'}">
     <div class="center first-item">
-    <div *ngIf="!data.seam_score_ok">
+    <div *ngIf="'!data.seam_score_ok'">
       <img class="alert"  src="../assets/alert.png" alt="警告">
     </div>
     <span class="">上次钢卷号: {{data.coil_id}}</span>
