--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,10 +70,10 @@
 <section class="space-around">
   <div id="rander">
     <echart [chartType]="radar" class="rander-chart"></echart>
-    <div class="star-label">
-      <span class="star-label-up">{{data.seam_score}}</span>
-      <span class="star-label-down">焊接质量评分</span>
-    </div>
+    <!--<div class="star-label">-->
+      <!--<span class="star-label-up">{{data.seam_score}}</span>-->
+      <!--<span class="star-label-down">焊接质量评分</span>-->
+    <!--</div>-->
   </div>
 
   <div id="line">
