修改标志位的名字

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="space-between score-field">
   <img class="logo" src="../assets/logo.png" alt="baosteel">
   <div>
-    <div class="welder-name" style="font-weight:bold">焊机{{data.machine_name}}</div>
+    <div class="welder-name" style="font-weight:bold">{{data.machine_name}}</div>
     <div class="space-around">
       <img class="health-logo" src="../assets/health.png" alt="baosteel">
       <span class="health-desc">健康评分：</span>
