--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,7 @@
       <!--<span class="star-label-up">{{data.seam_score}}</span>-->
       <!--<span class="star-label-down">焊接质量评分</span>-->
     <!--</div>-->
+    <div class="rander-down">aaaaa</div>
   </div>
 
   <div id="line">
