1：仪表盘下方增加文字，文字的行数根据 quality_des 字段的数值来决定 2：最下方添加L2一行

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -161,6 +161,24 @@
   text-align: center;
   float: left;
 }
+.rander-child-down{
+  height: 33.3%;
+  width: 100%;
+  display: block;
+  color: white;
+  text-align: center;
+  float: left;
+}
+.alert—red{
+  color: red;
+}
+
+.alert-yellow{
+  color: yellow;
+}
+.alert-green{
+  color: green;
+}
 
 .line-chart{
   width:100%;
